Adding modules. Modernizing config files.